package edu.fiuba.algo3.modelo.Sorpresa;

import edu.fiuba.algo3.modelo.Vehiculos.Vehiculo;

public interface Sorpresa {
    void sorprender(Vehiculo vehiculo);
}
