@startuml
'https://plantuml.com/class-diagram

class Gps{
    + empezarJuego()
}

class Jugador{
    - nombre

    + moverArriba()
    + moverAbajo()
}

abstract Vehiculo{
    - movimientos
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

interface Accionable{
    +Accionar(Vehiculo)
}

class Moto{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}
class Auto{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

class 4x4{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

class Ciudad{
    + generarMatriz()
    + colocarObjetos()
}

class Posicion{
    + x
    + y
}

interface Sorpresa{
    + sorprender(Vehiculo);
}

class Favorable{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

class Desfavorable{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

class CambioVehiculo{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

interface Obstaculo{
    + sumarMovimientos(Vehiculo)
}

class Pozo{
    + sumarMovimientos(Vehiculo)
     + accionar(Vehiculo)
}

class Piquete{
    + sumarMovimientos(Vehiculo)
    + accionar(Vehiculo)
}

class ControlPolicial{
    + sumarMovimientos(Vehiculo)

}


class Posicion{

}

class Puntaje{
}
Moto ..|> Vehiculo
Auto ..|> Vehiculo
4x4 ..|> Vehiculo
Gps --> Jugador
Gps --> Ciudad
Vehiculo --> Posicion
Pozo ..|> Obstaculo

Piquete ..|> Obstaculo

ControlPolicial ..|> Obstaculo

Ciudad "1" --> "*" Accionable
Ciudad <..> Vehiculo

Favorable ..|> Sorpresa

Desfavorable ..|> Sorpresa

CambioVehiculo ..|> Sorpresa

Jugador --> Vehiculo
Jugador --> Puntaje

Sorpresa ..|> Accionable
Obstaculo ..|> Accionable


@enduml